--- a/stylings.css
+++ b/stylings.css
@@ -6,6 +6,20 @@ body{
     color: #fff;
     background-color: orangered;
 }
+
+.form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 15px auto;
+    border-radius: 5px;
+    cursor: pointer;
+    padding: 2rem 1rem;
+    background-color: wheat;
+    width: 500px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+}
+
 .hero{
     height: 65vh;
     display: flex;
