--- a/stylings.css
+++ b/stylings.css
@@ -4,20 +4,66 @@ body{
     margin: 0;
     padding: 0;
     color: #fff;
-    background-color: orangered;
+    background-color: white;
 }
 
 .form{
-    display: flex;
-    justify-content: center;
-    align-items: center;
     margin: 15px auto;
-    border-radius: 5px;
     cursor: pointer;
     padding: 2rem 1rem;
-    background-color: wheat;
-    width: 500px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    background-color: rgb(237, 245, 228);
+    width: 400px;
+    height: 400px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+}
+.form p, h1{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 400;
+    color: black;
+    margin-top: 40px;
+}
+.form-groups {
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+h1{
+    color: black;
+    font-style: italic;
+}
+
+
+input[type="text"]{
+    margin: 10px auto;
+    padding: 0.5rem;
+    width: 250px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+    background: white;
+}
+input::placeholder{
+    color: #999;
+    font-size: italic;
+    font-size: 16px;
+    font-weight: bold;
+    opacity: 1;
+}
+
+.button-group button, button[type="submit"] {
+    background: #007bff;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+.button-group button:hover, button[type="submit"]:hover {
+    background: #0056b3;
+    transform: scale(1.05);
 }
 
 .hero{
