--- a/stylings.css
+++ b/stylings.css
@@ -1,17 +1,35 @@
 body{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     margin: 0;
-    padding: 0;
+    padding: 0 50px;
     color: #fff;
     background-color: white;
+    box-sizing: border-box;
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 100vh;
+    padding: 0 50px;
+}
+
+.left-contents{
+    padding-right: 20px;
+    font-size: 18px;
+    color: #333;
 }
 
 .form{
     margin: 15px auto;
     cursor: pointer;
     padding: 2rem 1rem;
-    background-color: rgb(237, 245, 228);
+    background-color: white;
     width: 400px;
     height: 400px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
@@ -41,7 +59,7 @@ input[type="text"]{
     width: 250px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
     background: white;
 }
 input::placeholder{
