--- a/src/css/stylings.css
+++ b/src/css/stylings.css
@@ -72,17 +72,17 @@ form p {
     text-align: left;
 }
 
-input[type="text"]{
-    margin: 10px;
-    font-size: 16px;
-    width: 250px;
-    border: 1px solid #ccc;
-    border-radius: 6px;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    background: #f5f5f5;
+input[type="text"], input[type="password"] {
+  color: #333;
+  background-color: #f5f5f5;
+  border: none;
+  padding: 10px;
+  width: 100%;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  font-size: 16px;
 }
 input::placeholder{
-    color: #888;
+    color: #999;
     font-weight: 500;
 }
 
